<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/employeereview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminWorld.EmployeeReviewActivity">


    <!-- TODO: Update blank fragment layout -->
...
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/profilepagebackboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/employeereviewmanagewindow">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userbreakdownconstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
...
                        android:text="10.6 hours"
                        android:textSize="25sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/employeereviewpay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_toRightOf="@id/employeereviewhoursworked"
                        android:fontFamily="@font/arial_rounded_mt_bold_font"
                        android:text="$169.69"
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/employeereviewname">

            <EditText
                android:id="@+id/editTextpayrate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roundedrectanglepurplewhitestroke"
...
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:src="@mipmap/ic_launcher_round"
            android:visibility="gone"
            app:civ_border_color="#bfbfbf"
            app:civ_border_width="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/employeereviewbackbutton"
            app:layout_constraintStart_toEndOf="@+id/employeereviewbackbutton"
            app:layout_constraintTop_toTopOf="@+id/employeereviewbackbutton" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/statusindicatoruseritemonline2"
            android:layout_width="15dp"
...
            app:layout_constraintBottom_toBottomOf="@+id/employeereviewbackbutton"
            app:layout_constraintStart_toEndOf="@+id/employeereviewbackbutton"
            app:layout_constraintTop_toTopOf="@+id/employeereviewbackbutton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/employeereviewmanagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/managebutton"
            android:paddingHorizontal="30dp"
            android:text="Manage"
...
