<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInSignup.SignIn"
    android:orientation="vertical"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:paddingVertical="70dp"
    android:id="@+id/signinscreen"
    android:transitionName="screentransit"
    android:theme="@style/SignupinTheme"
    >



    <TextView
        android:id="@+id/welcomesignin"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/sign_in"
        android:text="Sign In"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        android:transitionName="WelcomeSignInUp"/>


    <EditText
        android:id="@+id/Emailsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/signintextbubble"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:layout_marginHorizontal="40dp"
        android:elevation="10dp"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/Passwordsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/signintextbubble"
        android:inputType="textPassword"
        android:hint="Password"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="10dp"
        android:layout_marginHorizontal="40dp"
        android:elevation="10dp"
        android:padding="20dp"
        app:passwordToggleEnabled="true"/>


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/Passwordsignin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--        android:paddingTop="10dp"-->
<!--        android:paddingBottom="10dp"-->
<!--        app:passwordToggleEnabled="true"-->

<!--        android:transitionName="passwordtrans">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPassword"-->
<!--            android:hint="Password"-->
<!--            android:drawableStart="@drawable/ic_baseline_password_24"-->
<!--            android:drawablePadding="10dp"-->
<!--            />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    </LinearLayout>-->

    <Button
        android:id="@+id/signinconfirmbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Sign In"
        android:padding="10dp"
        android:background="@drawable/checkinbutton"
        android:layout_gravity="end"
        android:textColor="@color/white"
        android:elevation="10dp"
        android:layout_marginHorizontal="40dp"
        />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot your pasword?"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/forgot_your"/>

    <TextView
        android:id="@+id/signuperrormessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot your pasword?"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="invisible"
        android:textAppearance="@style/loginerror"/>

    <TextView
        android:id="@+id/attemptsleft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot your pasword?"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="invisible"
        android:textAppearance="@style/loginerror"/>


    <ProgressBar
        android:id="@+id/signupprogressBar"
        android:indeterminateDrawable="@drawable/progressbarstyle"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>