<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserWorld.UserHome"
    android:id="@+id/userhomeactivity">

    <FrameLayout
        android:id="@+id/userhome_fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/userhome_navigation"
        app:layout_constraintBottom_toTopOf="@+id/userhome_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_above="@id/userhome_navigation"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toTopOf="@+id/userhome_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/userhome_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:background="@color/white"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        app:cnb_menuResource="@menu/menu_user"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>